<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <com.xb.powerplatform.utilsclass.myViews.Header
       android:id="@+id/header"
       app:header_is_left_iv_visiable="false"
       app:header_title="@string/app_name"
       app:header_is_right_tv_visiable="true"
       app:header_title_right="@string/register"
       android:layout_width="match_parent"
       android:layout_height="45dp">
   </com.xb.powerplatform.utilsclass.myViews.Header>

   <LinearLayout
       android:id="@+id/linear"
       android:layout_marginTop="50dp"
       android:layout_below="@+id/header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="4dp">
      <!--账号-->
      <LinearLayout
          style="@style/linerlayout">
         <ImageView
             style="@style/ImaheView"
             android:src="@drawable/phone"/>
         <EditText
             android:id="@+id/et_phone"
             style="@style/EditText"
             android:hint="请输入手机号"/>
      </LinearLayout>
      <!--分割线-->
      <View
          style="@style/line"
          android:layout_marginRight="10dp"
          android:layout_marginLeft="10dp"/>
      <!--密码-->
      <LinearLayout
            style="@style/linerlayout">
         <ImageView
             style="@style/ImaheView"
             android:src="@drawable/password" />
         <EditText
             android:id="@+id/et_password"
             style="@style/EditText"
             android:hint="请输入密码" />
      </LinearLayout>
      <!--分割线-->
      <View
          style="@style/line"
          android:layout_marginRight="10dp"
          android:layout_marginLeft="10dp"/>
      <!--记住密码 -->
      <LinearLayout
          style="@style/linerlayout"
          android:layout_marginTop="20dp"
          android:orientation="horizontal">
         <CheckBox
             android:id="@+id/chechBox"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"/>
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:textColor="@color/color_bg_selected"
             android:textSize="17dp"
             android:text="@string/remimber_password"
             android:gravity="center_vertical"/>
         <TextView
             android:id="@+id/checkpwd"
             android:layout_width="80dp"
             android:layout_height="match_parent"
             android:textColor="@color/color_bg_selected"
             android:textSize="17dp"
             android:text="@string/check_pwd"
             android:gravity="center_vertical"/>
      </LinearLayout>
   </LinearLayout>

   <LinearLayout
       android:layout_below="@id/linear"
       android:layout_marginTop="20dp"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:orientation="horizontal">
      <Button
          android:id="@+id/btn_login"
          style="@style/Button"
          android:text="@string/btn_login" />
   </LinearLayout>

</RelativeLayout>
