<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_trainingevaluation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xb.powerplatform.training_evaluation.activity.TrainingEvaluationActivity">

    <com.xb.powerplatform.utilsclass.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/training_evaluation"></com.xb.powerplatform.utilsclass.myViews.Header>
    <RadioGroup
        android:id="@+id/mRadionGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb0"
            android:checked="true"
            style="@style/activity1_radionbutton"
            android:text="@string/evaluation"/>
        <RadioButton
            android:id="@+id/rb1"
            style="@style/activity1_radionbutton"
            android:text="@string/impact_assessment"/>

    </RadioGroup>
    <com.xb.powerplatform.utilsclass.myViews.NoScrollViewPager
        android:id="@+id/mViewPage"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">
    </com.xb.powerplatform.utilsclass.myViews.NoScrollViewPager>
</LinearLayout>
