<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_trainbigdata"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xb.powerplatform.train_bigdata.activity.TrainBigDataActivity">


    //头部
    <com.xb.powerplatform.utilsclass.myViews.Header
        style="@style/Heander"
        android:id="@+id/header"
        app:header_title="@string/train_bigdata">
    </com.xb.powerplatform.utilsclass.myViews.Header>
    <RadioGroup
        android:id="@+id/mRadionGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb0"
            android:checked="true"
            style="@style/activity1_radionbutton"
            android:text="@string/individual_learning"/>
        <RadioButton
            android:id="@+id/rb1"
            style="@style/activity1_radionbutton"
            android:text="@string/autonomic_learning"/>

    </RadioGroup>
    <com.xb.powerplatform.utilsclass.myViews.NoScrollViewPager
        android:id="@+id/mViewPage"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">
    </com.xb.powerplatform.utilsclass.myViews.NoScrollViewPager>
</LinearLayout>
