<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_dailyinpectiontable_xq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xb.powerplatform.dailyinspection.activity.DailyInpectionTableXQActivity">

    <com.xb.powerplatform.utilsclass.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/Table_check">
    </com.xb.powerplatform.utilsclass.myViews.Header>

    <TextView
        android:id="@+id/mTextView"
        android:lineSpacingExtra="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:background="@drawable/linearlayout"
       style="@style/linerlayout">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:text="@string/deduction_senson"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/ziti"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@null"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/linearlayout"
        style="@style/linerlayout">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:text="@string/deduction_num"
            android:gravity="center"/>
        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/ziti"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@null"
            android:gravity="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/mButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/zhuangtai"
        android:layout_margin="40dp"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:gravity="center"
        android:text="@string/deduction"/>
</LinearLayout>
