<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_acceptance_fragment02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xb.powerplatform.acceptance_cancellation.activity.AcceptanceFragment02Activity">
    <com.xb.powerplatform.utilsclass.myViews.Header
        android:id="@+id/header"
        style="@style/Heander"
        app:header_title="@string/CD_acceptance_cancellation">
    </com.xb.powerplatform.utilsclass.myViews.Header>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn1"
                    android:text="@string/pass_through"
                   style="@style/Button"/>
                <Button
                    android:id="@+id/btn2"
                    android:text="@string/no_pass_through"
                    style="@style/Button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
