<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_education"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xb.powerplatform.education_and_training.activity.EducationActivity">

    <RelativeLayout
        android:background="@color/color_bg_selected"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/left"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back"
            android:contentDescription="@string/app_name"
            android:layout_marginLeft="10dip" />
        <TextView
            android:id="@+id/title"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18.0sp" />
        <TextView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

    <com.jude.rollviewpager.RollPagerView
        android:id="@+id/rellPagerView"
        android:layout_width="match_parent"
        android:layout_height="200dp">
    </com.jude.rollviewpager.RollPagerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:background="@color/holo_orange_light"
            android:layout_margin="10dp"
            android:text="@string/moni_training"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/holo_blue_dark"
            android:layout_margin="10dp"
            android:text="@string/zaixian_stydy"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/holo_orange_light"
            android:layout_margin="10dp"
            android:text="@string/zaixian_training"
            android:textSize="20dp"/>
    </LinearLayout>
</LinearLayout>
